corrected font weight on mobile Search bar

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -64,7 +64,7 @@ nav .input-field label {
 	padding: 9px 32px 0px 45px;
 	color: #FF9F00;
 	font-size: 20px;
-	font-weight: 400;
+	font-weight: 500;
 }
 
 .sideNav_icons .input-field {
@@ -84,7 +84,7 @@ nav .input-field label {
 	border-bottom: none;
 	box-shadow: none;
 	color: #FF9F00;
-	font-weight: 400;
+	font-weight: 500;
 	padding-left: 45px;
 }
 
